# rs-game-model-test

./: Cargo.toml  README.md
example/: file.rs  json.rs  lua.rs  pathfinding.rs
npc/: james.json  james.lua  john.json  john.lua  juan.json  juan.lua
