[package]
name = "model-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.2.0"
rlua = "0.19.4"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"

[[example]]
name = "json"
path = "example/json.rs"

[[example]]
name = "lua"
path = "example/json.rs"

[[example]]
name = "pathfinding"
path = "example/pathfinding.rs"